styles/style.css
* {
    box-sizing: border-box;
}

@font-face {
    font-family: Odin;
    src: url(../fonts/Norse-Bold.otf);
}

.side-bar img{
    max-width: 100%;
    height: 101vh;
}

html, body {
    padding: 0;
    margin: 0;
    height: 100%;
    overflow: hidden;
}

body {
    display: flex;
}

.side-bar {
    width: clamp(20%, 40%, auto);
    position: relative;
    margin: 0;
    padding: 0;
}

.image-text {
    position: absolute;
    top: 30%;
    color: white;
    width: 100%;
    height: 70%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.logo span {
    font-size: 10rem;
    font-family: Odin, 'Times New Roman', Times, serif;
}

.image-text a {
    color: white;
}

.logo {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(24, 22, 22, 0.473);
    height: 200px;
    width: 100%;
}

.logo img {
    height: 200px;
}

.form-holder {
    box-shadow:0px 2px 8px 0px rgba(68, 67, 67, 0.473);
    padding: 2rem 4rem;
}

.content p,
.content span,
button,
label, 
.attribution{
    font-size: 1.8rem;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 700;
    margin-top: 0;
}

.attribution {
    font-size: 1rem;
}

input {
    border-radius: 5px;
    box-shadow: none;
    border: 1px solid rgb(212, 212, 212);
    height: 1.8rem;
    font-size: 1rem;
}

input:invalid {
    border: 1px solid red;
}

input:focus {
    outline: none;
    border: 1px solid rgb(62, 130, 255);
    box-shadow: 1px 1px 4px 0px;
}

.input-pair{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 2px;
    width: max(260px, 50%);
    margin: 0.5rem 0;
}

.form-inputs {
    display: flex;
    flex-wrap: wrap;
    max-width: 50rem;
}

.content>p,
.content button,
.log-in p {
    max-width: 50rem;
    margin-left: 4rem;
    margin-right: 4rem;
}

.content {
    width: 100%;
    margin-top: 10rem;
}

button {
    margin: 2rem 0;
    padding: .5rem 3rem;
    color: white;
    background-color: #596D48;
    border-radius: .5rem;
    border: none;
    font-size: 1.5rem;
}

label {
    font-size: .8rem;   
}

.log-in p {
    font-size: 1rem;
}

.log-in a {
    color:#596D48;
}

